--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header, footer {
     background-color: rgb(8, 212, 8);
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
 }
 
 .product-container {
@@ -46,6 +46,8 @@ header, footer {
     position: fixed;
     top: 10px;
     right: 10px;
+    max-height: 80vh;
+    overflow-y: scroll;
 }
 
 .cart h2 {
@@ -53,10 +55,16 @@ header, footer {
 }
 
 .cart-item {
+    top: 0;
     background-color: #fff;
     border-radius: 5px;
     margin: 10px 0;
     padding: 10px;
+    max-height: 35vh;
+}
+.cart-item img{
+    width: 10vw;
+    height: 15vh;
 }
 
 /* Estilos para el botón de compra y cancelación (simulados) */
@@ -76,4 +84,18 @@ header, footer {
 .product-card img {
     max-width: 100%;
     height: auto;
+}
+
+button{
+    font-size: 1.3rem;
+    background-color: rgb(130, 255, 80);
+    color: #f7f7f7;
+    border: 2px solid rgba(205, 192, 192, 0.509);
+    padding: .5rem;
+    border-radius: 15px;
+    box-shadow: 3px 3px 3px 3px rgba(205, 192, 192, 0.509);
+}
+
+h1{
+    font-size: 3rem;
 }
